--- a/CNN.ipynb
+++ b/CNN.ipynb
@@ -40,8 +40,8 @@
       "source": [
         "import os\n",
         "# Insert your kaggle data\n",
-        "os.environ['KAGGLE_USERNAME'] = \"lucarigamonti\"\n",
-        "os.environ['KAGGLE_KEY'] = \"4e1dd2934766b98725c22455854c82d4\""
+        "os.environ['KAGGLE_USERNAME'] = \"xxxxxxxxx\"\n",
+        "os.environ['KAGGLE_KEY'] = \"xxxxxxxxx\""
       ],
       "metadata": {
         "id": "AKi4BN04JQk4"
